--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT =5000
-CLIENT_URL = http://localhost:3000
+CLIENT_URL = http://phongtro-viethoang.vercel.app
 SECRET_KEY = dkanskfsdkfsndfksnfsdf
 SECRET_GENERATE = phongtro123
 LIMIT = 5
