--- a/.env
+++ b/.env
@@ -1,10 +1,16 @@
-PORT =5000
-CLIENT_URL = http://phongtro-viethoang.vercel.app
-SECRET_KEY = dkanskfsdkfsndfksnfsdf
+# PORT =5000
+# CLIENT_URL = http://phongtro-viethoang.vercel.app
+# SECRET_KEY = dkanskfsdkfsndfksnfsdf
+# SECRET_GENERATE = phongtro123
+# LIMIT = 5
+# DB_HOST = dpg-cgdcl182qv2aq5knr6j0-a.singapore-postgres.render.com
+# DB_NAME = db_phongtro123_cfjp
+# DB_USENAME= db_phongtro123_cfjp_user
+# DB_PASSWORD= hL3T4nNJWPqcjetMedsi1G6QjqjjUBBu
+# DB_DIALECT= postgres
+
+PORT = 5000
+CLIENT_URL = http://localhost:3000
+SECRET_KEY = 627666543373295
 SECRET_GENERATE = phongtro123
 LIMIT = 5
-DB_HOST = dpg-cgdcl182qv2aq5knr6j0-a.singapore-postgres.render.com
-DB_NAME = db_phongtro123_cfjp
-DB_USENAME= db_phongtro123_cfjp_user
-DB_PASSWORD= hL3T4nNJWPqcjetMedsi1G6QjqjjUBBu
-DB_DIALECT= postgres
