--- a/.env
+++ b/.env
@@ -1,16 +1,14 @@
-# PORT =5000
-# CLIENT_URL = http://phongtro-viethoang.vercel.app
-# SECRET_KEY = dkanskfsdkfsndfksnfsdf
-# SECRET_GENERATE = phongtro123
-# LIMIT = 5
-# DB_HOST = dpg-cgdcl182qv2aq5knr6j0-a.singapore-postgres.render.com
-# DB_NAME = db_phongtro123_cfjp
-# DB_USENAME= db_phongtro123_cfjp_user
-# DB_PASSWORD= hL3T4nNJWPqcjetMedsi1G6QjqjjUBBu
-# DB_DIALECT= postgres
 
-PORT = 5000
-CLIENT_URL = http://localhost:3000
-SECRET_KEY = 627666543373295
+
+
+PORT =5000
+CLIENT_URL =  http://localhost:3000
+CLIENT_URL = http://phongtro-viethoang.vercel.app
+SECRET_KEY = dkanskfsdkfsndfksnfsdf
 SECRET_GENERATE = phongtro123
 LIMIT = 5
+DB_HOST = dpg-cjgrtnb37aks73eh84m0-a.singapore-postgres.render.com
+DB_NAME = db_phongtro123_g9n4
+DB_USENAME= db_phongtro123_g9n4_user
+DB_PASSWORD= WLrgUSYFXq6mvygVl1mFMZCldFLXNbmK
+DB_DIALECT= postgres
