--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,24 +1,44 @@
 {
-    "development": {
-        "username": "root",
-        "password": null,
-        "database": "phongtro123",
-        "host": "127.0.0.1",
-        "dialect": "mysql",
-        "logging": false
-    },
-    "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
-        "dialect": "mysql"
-    },
-    "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
-        "dialect": "mysql"
+
+  "development": {
+    "username": "db_phongtro123_g9n4_user",
+    "password": "WLrgUSYFXq6mvygVl1mFMZCldFLXNbmK",
+    "database": "db_phongtro123_g9n4",
+    "host": "dpg-cjgrtnb37aks73eh84m0-a.singapore-postgres.render.com",
+    "dialect": "postgres",
+    "logging": false,
+    "dialectOptions":{
+      "ssl":{
+        "require":true,
+        "rejectUnauthorized":false
+      }
     }
+  },
+
+
+
+  "production": {
+    "username": "db_phongtro123_g9n4_user",
+    "password": "WLrgUSYFXq6mvygVl1mFMZCldFLXNbmK",
+    "database": "db_phongtro123_g9n4",
+    "host": "dpg-cjgrtnb37aks73eh84m0-a.singapore-postgres.render.com",
+    "dialect": "postgres",
+    "logging": false,
+    "dialectOptions":{
+      "ssl":{
+        "require":true,
+        "rejectUnauthorized":false
+      }
+    }
+  }
 }
+
+
+
+
+
+
+
+
+
+
