--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-
-
-
 PORT =5000
 CLIENT_URL =  http://localhost:3000
 CLIENT_URL = http://phongtro-viethoang.vercel.app
@@ -8,7 +5,7 @@ SECRET_KEY = dkanskfsdkfsndfksnfsdf
 SECRET_GENERATE = phongtro123
 LIMIT = 5
 DB_HOST = dpg-cjgrtnb37aks73eh84m0-a.singapore-postgres.render.com
-DB_NAME = db_phongtro123_g9n4
-DB_USENAME= db_phongtro123_g9n4_user
-DB_PASSWORD= WLrgUSYFXq6mvygVl1mFMZCldFLXNbmK
+DB_NAME = dbphongtro123
+DB_USENAME= dbphongtro123_user
+DB_PASSWORD= CaoLUISfTPyiXNrUP9VzTfRKV52OnYE4
 DB_DIALECT= postgres
